tests/application/access-policy/external-blank-hostname-assert.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: empty-hostname
spec:
  image: image
  port: 8080
  accessPolicy:
    outbound:
      external:
        - host: maskinporten.no
        - host: ''
        - host: idporten.no
status:
  accessPolicies: InvalidConfig
  conditions:
    - type: Ready
      status: "False"
      reason: InvalidConfig
    - type: ExternalRulesValid
      message: External rules are invalid – hostname may be empty or duplicate, or the hostname may not be a valid DNS name
      reason: ApplicationReconciled
      status: "False"
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: empty-hostname-egress-33b93549d596b57f
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  resolution: DNS
  hosts:
    - maskinporten.no
  ports:
    - name: https
      number: 443
      protocol: HTTPS
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: empty-hostname-egress-6de864d90c056dc1
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  resolution: DNS
  hosts:
    - idporten.no
  ports:
    - name: https
      number: 443
      protocol: HTTPS
